--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body{
   border-radius: 8px;
   margin: 0;
   padding: 0;
+  
+  
 }
 #b1{
   text-align: left;
@@ -61,4 +63,22 @@ pre{
   text-decoration: none; 
   margin-left: 180px;
   
+}
+
+@media (min-width: 768px) {
+  .name {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+  }
+
+  .name img {
+    height: 220px;
+    width: auto;
+    margin-right: 50px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
 }
