--- a/style.css
+++ b/style.css
@@ -75,10 +75,14 @@ pre{
   .name img {
     height: 220px;
     width: auto;
-    margin-right: 50px;
+    margin-right: 106px;
   }
 
   h4 {
     font-size: 20px;
+    
+  }
+  table h4 {
+    margin-right: 106px;
   }
 }
